--- a/GradingSystem/View/Admin/AddProgram.xaml
+++ b/GradingSystem/View/Admin/AddProgram.xaml
@@ -6,89 +6,156 @@
         xmlns:local="clr-namespace:GradingSystem.View.Admin"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" Height="280" Width="670"
+        WindowStartupLocation="CenterScreen" Height="500" Width="800"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
     <Grid>
-        <Border Background="Black" Margin="05 05 05 05" CornerRadius="4">
-            <materialDesign:Card Effect="{StaticResource MaterialDesignElevationShadow1}">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="0" Background="Green">
-                        <Grid HorizontalAlignment="Left">
-                            <TextBlock Text="Add Students" Margin="10 0 0 0" 
-                                      FontSize="15"
-                                      Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-                                      VerticalAlignment="Center"/>
-                        </Grid>
-                        <Grid HorizontalAlignment="Right">
-                            <StackPanel Margin="0 0 0 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
-                                <Button Style="{StaticResource MaterialDesignIconButton}" x:Name="CloseButton" Content="{materialDesign:PackIcon Kind=WindowClose}" Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Close"/>
-                            </StackPanel>
-                        </Grid>
-                    </Grid>
-                    <Grid Grid.Row="1" Margin="20 05 20 20">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-
-                        <Grid Grid.Row="0">
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto"/>
-                                <ColumnDefinition Width="auto"/>
-                            </Grid.ColumnDefinitions>
-
-                            <TextBox x:Name="ProgramIdTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                        Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
-                        Grid.Column="0" MaxLength="20">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Program ID" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
-                            </TextBox>
-
-                            <TextBox x:Name="ProgramNameTxt"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                        Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
-                        Grid.Column="1" MaxLength="255">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Program Name" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
-                            </TextBox>
-                        </Grid>
-
-                        <Grid Grid.Row="1" Margin="0 0 0 0">
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto"/>
-                            </Grid.ColumnDefinitions>
-
-                            <TextBox x:Name="DescriptionTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                     Margin="0 10 0 20" Height="50" Width="620" FontSize="20"
-                                     Grid.Column="1" MaxLength="255">
-                                <materialDesign:HintAssist.Hint>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Program Description" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </materialDesign:HintAssist.Hint>
-                            </TextBox>
-                        </Grid>
-                    </Grid>
-                    <Grid Grid.Row="2" Margin="10 0 10 10">
+        <materialDesign:Card UniformCornerRadius="20">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0">
+                    <materialDesign:Card Background="DarkGreen" UniformCornerRadius="0">
                         <Grid>
-                            <Button Style="{StaticResource   MaterialDesignFlatDarkBgButton}" Click="addProgramBtn">SAVE</Button>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="100"/>
+                                        <RowDefinition Height="150"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid Grid.Row="0">
+                                        <TextBlock Text="The University of Manila" Foreground="white"
+                                            FontFamily="Tahoma" Style="{StaticResource MaterialDesignCaptionTextBlock}"
+                                            FontSize="25" VerticalAlignment="Bottom" TextWrapping="Wrap" TextAlignment="Center"
+                                            HorizontalAlignment="Center"/>
+                                    </Grid>
+                                    <Image Grid.Row="1" Source="/Resources/man.png" 
+                                    Height="130" Margin="10" 
+                                    HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    <Grid Grid.Row="2">
+                                        <TextBlock Text="Let's get you set Up" Foreground="white"
+                                            FontFamily="Tahoma"
+                                            FontSize="20" Margin="0 0 0 0"
+                                            VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                                        <TextBlock Text="It should just take a few minutes of your time." Foreground="white"
+                                            FontFamily="Tahoma" TextWrapping="Wrap" Style="{StaticResource MaterialDesignBody1TextBlock}"
+                                            FontSize="15" Margin="10 40 10 0" TextAlignment="Center"
+                                            VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                                        <Image Grid.Row="1" Source="/Resources/next.png" 
+                                        Height="50" Margin="0 20 0 0"
+                                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Grid>
+                                </Grid>
+                            </Grid>
                         </Grid>
-                    </Grid>
+
+                    </materialDesign:Card>
                 </Grid>
-            </materialDesign:Card>
-        </Border>
+                <Grid Grid.Column="1">
+                    <materialDesign:Card Background="White" UniformCornerRadius="0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Grid Grid.Row="0">
+                                <Grid HorizontalAlignment="Right">
+                                    <StackPanel Margin="0 0 20 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
+                                        <!-- Minimize Button -->
+                                        <Button Style="{StaticResource MaterialDesignIconButton}" Foreground="black"
+                                         x:Name="MinimizeButton" Content="{materialDesign:PackIcon Kind=Minimize}" 
+                                         Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Minimize"/>
+                                        <!-- Close Button -->
+                                        <Button Style="{StaticResource MaterialDesignIconButton}" Foreground="black"
+                                         x:Name="CloseButton" Content="{materialDesign:PackIcon Kind=Close}" 
+                                         Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="CloseWindow"/>
+                                    </StackPanel>
+                                </Grid>
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="70"/>
+                                    </Grid.RowDefinitions>
+
+                                    <Grid Grid.Row="0">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                            <RowDefinition Height="45.96"/>
+                                        </Grid.RowDefinitions>
+
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="200"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <!-- Program ID -->
+                                        <TextBlock Text="Program ID" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
+                                        <TextBox x:Name="ProgramIdTxt" Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                                 Height="25" Width="200" FontSize="15" HorizontalAlignment="left" Margin="30 0 0 0"
+                                                 Grid.Column="1" Grid.Row="2" Padding="10 0 0 0">
+                                        </TextBox>
+                                        
+                                        <!-- Program Name -->
+                                        <TextBlock Grid.Row="3" Text="Program Name" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
+                                        <TextBox x:Name="ProgramNameTxt"  Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                                 Grid.Column="1" Grid.Row="3">
+                                        </TextBox>
+
+                                        <!-- Last Name -->
+                                        <TextBlock Grid.Row="4" Text="Program Major" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
+                                        <TextBox x:Name="MajorTxt"  Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                                 Grid.Column="1" Grid.Row="4">
+                                        </TextBox>
+
+                                        <!-- Email Address -->
+                                        <TextBlock Grid.Row="5" Text="Description" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
+                                        <TextBox x:Name="DescriptionTxt" Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                                 Grid.Column="1" Grid.Row="5">
+                                        </TextBox>
+                                    </Grid>
+                                    <Grid Grid.Row="1">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid Grid.Column="1">
+                                                <Button VerticalAlignment="Top" Margin="0 0 0 5" Background="Gray"
+                                                 Style="{StaticResource MaterialDesignFlatDarkBgButton}" 
+                                                 Click="CancelBtn">Cancel</Button>
+                                            </Grid>
+                                            <Grid Grid.Column="2">
+                                                <Button Margin="5 0 0 0" VerticalAlignment="Top" 
+                                                 Style="{StaticResource MaterialDesignFlatDarkBgButton}" 
+                                                 Click="addProgramBtn">Save</Button>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+                            </Grid>
+                        </Grid>
+                    </materialDesign:Card>
+                </Grid>
+            </Grid>
+        </materialDesign:Card>
     </Grid>
 </Window>
