--- a/GradingSystem/View/Admin/ManageUser.xaml
+++ b/GradingSystem/View/Admin/ManageUser.xaml
@@ -59,7 +59,7 @@
                                             </TextBox>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddUserBtn">
                                                 <StackPanel>
                                                     <materialDesign:PackIcon Kind="Add" Height="20"/>
                                                 </StackPanel>
